--- a/w2/apache2/apache2/install_apache2.yml
+++ b/w2/apache2/apache2/install_apache2.yml
@@ -5,7 +5,16 @@
     - vars/default.yml
 - tasks:
   - name: Install latest version of Apache
-    apt: name=apache2 update_cache=yes state=latest
+    apt: 
+      name: apache2
+      update_cache: yes 
+      state: latest
+
+  - name: "UFW firewall allow HTTP on port {{ http_port }}"
+    ufw:
+      rule: allow
+      port: "{{ http_port }}"
+      proto: tcp
 
   - name: Create document root for your domain
     file:
@@ -25,14 +34,8 @@
       dest: "/etc/apache2/sites-available/{{ http_conf }}"
     notify: restart-apache
 
-  - name: "UFW firewall allow HTTP on port {{ http_port }}"
-    ufw:
-      rule: allow
-      port: "{{ http_port }}"
-      proto: tcp
-
-  handlers:
-    - name: restart-apache
-      service:
-        name: apache2
-        state: restarted
+handlers:
+  - name: restart-apache
+    service:
+      name: apache2
+      state: restarted
