--- a/w2/nginx/nginx/install_nginx.yml
+++ b/w2/nginx/nginx/install_nginx.yml
@@ -10,6 +10,29 @@
       update_cache: yes
       state: latest
 
+  - name: Adjusting the Firewall
+    ufw:
+      rule: allow
+      port: {{ http_port }}
+      protoclol: tcp
+
+  - name: Setting Up Server Blocks
+    file:
+      path: "/var/www/{{ http_host }}/html"
+      state: directory
+      owner: "{{ app_user }}"
+      mode: '0755'
+
+  - name: Copy your index page
+    template:
+      src: "files/index.html.j2"
+      dest: "/var/www/{{ http_host }}/html/index.html"
+
+  - name: Set up virtuahHost
+    template:
+      src: "files/nginx.conf.j2"
+      dest: "/etc/nginx/sites-available/{{ http_conf }}"
+    notify: restart-nginx
 
   handlers:
     - name: restart-nginx
