--- a/w2/nginx/nginx/install_nginx.yml
+++ b/w2/nginx/nginx/install_nginx.yml
@@ -4,7 +4,7 @@
   vars:
     - vars/default.yml
 - tasks:
-  - name: Install latest version of Apache
+  - name: Install latest version of Nginx
     apt:
       name: nginx
       update_cache: yes
@@ -34,8 +34,15 @@
       dest: "/etc/nginx/sites-available/{{ http_conf }}"
     notify: restart-nginx
 
-  handlers:
-    - name: restart-nginx
-      service:
-        name: nginx
-        state: restarted
+  - name: Enable new site
+    file:
+      src: /etc/nginx/sites-available/
+      dest: /etc/nginx/sites-enabled/
+      state: link
+    notify: restart-nginx
+
+handlers:
+  - name: restart-nginx
+    service:
+      name: nginx
+      state: restarted
