--- a/w2/php/php/install_php.yaml
+++ b/w2/php/php/install_php.yaml
@@ -10,17 +10,21 @@
       update_cache: yes 
       state: latest
 
-  - name: Install PHP
+  - name: Repo PHP 7.4
+    apt_repository:
+      repo="ppa:ondrej/php"
+
+  - name: Install PHP7.4
     apt: 
-      name: php
+      name: php7.4
       update_cache: yes 
-      state: latest
+      state: present
 
   - name: Install package
     apt: 
       name: {{ item }}
       update_cache: yes 
-      state: latest
+      state: present
     with_item:
       - php7.4-cli
       - php7.4-json
