--- a/w2/user/list_user_group.yaml
+++ b/w2/user/list_user_group.yaml
@@ -1,11 +1,15 @@
 ---
-- hosts: web
+- hosts: test
   become: true
   tasks:
+  - name: Get List User
+    command: cat /etc/passwd
+    register: list_users
   - name: List User
-    ansible.builtin.shell:
-      cmd: cat /etc/passwd
+    debug: var=list_users
 
+  - name: Get List Group
+    command: cat /etc/group
+    register: list_group
   - name: List User
-    ansible.builtin.shell:
-      cmd: cat /etc/group
+    debug: var=list_group
