--- a/w2/file/edit_permission_file/edit_permission_user.yaml
+++ b/w2/file/edit_permission_file/edit_permission_user.yaml
@@ -1,9 +1,9 @@
 ---
-- hosts: web
-  become: true
+- hosts: test
+  become: yes
   vars:
     - vars/default.yml 
-- tasks:
+  tasks:
   - name: CHANGE FILE PERMISSION
     ansible.builtin.file:
       path: "{{ path }}"
