--- a/w2/install/apache2/apache2/install_apache2.yml
+++ b/w2/install/apache2/apache2/install_apache2.yml
@@ -1,39 +1,35 @@
 ---
-- hosts: web
+- hosts: test
   become: true
+  become_user: datnt
   vars:
     - vars/default.yml
-- tasks:
+  tasks:
   - name: Install latest version of Apache
     apt: 
       name: apache2
       update_cache: yes 
       state: latest
-
   - name: "UFW firewall allow HTTP on port {{ http_port }}"
     ufw:
       rule: allow
       port: "{{ http_port }}"
       proto: tcp
-
   - name: Create document root for your domain
     file:
       path: "/var/www/{{ http_host }}"
       state: directory
       owner: "{{ app_user }}"
       mode: '0755'
-
   - name: Copy your index page
     template:
       src: "files/index.html.j2"
       dest: "/var/www/{{ http_host }}/index.html"
-
   - name: Set up virtuahHost
     template:
       src: "files/apache.conf.j2"
       dest: "/etc/apache2/sites-available/{{ http_conf }}"
     notify: restart-apache
-
   handlers:
   - name: restart-apache
     service:
