--- a/w2/user/delete_user/delete_user.yaml
+++ b/w2/user/delete_user/delete_user.yaml
@@ -1,8 +1,9 @@
 ---
-- hosts: web
+- hosts: test
   become: true
-  vars:
-    - vars/default.yml 
+  become_user: datnt
+  vars_files:
+    - vars/default.yaml 
 - tasks:   
   - name: Remove the user if present in the linux system
     ansible.builtin.user:
