--- a/w3/ansible/check_package_sudoers.yaml
+++ b/w3/ansible/check_package_sudoers.yaml
@@ -2,12 +2,10 @@
 - hosts: test
   remote_user: root
   vars:
-    package_names:
-      - sudo
+    - package: sudoer
   tasks:
     - name: Check if listed package is installed or not
-      command: dpkg-query -l "{{ item }}"
-      loop: "{{ package_names }}"
+      command: dpkg-query -l "{{ package }}"
       register: check_installed
     - name: Install package if not present
       package:
@@ -16,8 +14,7 @@
       loop: "{{ package_names }}"
       when: check_installed is failed
     - name: Check again
-      command: dpkg-query -l "{{ item }}"
-      loop: "{{ package_names }}"
+      command: dpkg-query -l "{{ package }}"
       register: check2_installed 
     - name: Result
       debug: var=check2_installed.stdout_lines
