--- a/w3/ansible/config_password.yaml
+++ b/w3/ansible/config_password.yaml
@@ -10,7 +10,9 @@
     shell: echo "password    requisite     pam_cracklib.so try_first_pass retry=3" >> /etc/pam.d/system-auth
     when: ansible_facts['os_family'] == "RedHat"
 
-    Sửa trong file /etc/SSH/SSHd_config dòng PermitRootLogin no. Đặt lại password cho account root đủ phức tạp và cất giữ ở 1 nơi khác.
+  - name: Disable SSH with account Root
+    shell: echo "PermitRootLogin no" >> /etc/SSH/SSHd_config
+    
 
-    Chỉ sử dụng việc xác thực bằng public key:
-Password Authentication no
+    # Chỉ sử dụng việc xác thực bằng public key:
+    # Password Authentication no
