--- a/w3/config_apache/apache2/config_apache2.yml
+++ b/w3/config_apache/apache2/config_apache2.yml
@@ -27,6 +27,10 @@
     shell: /usr/sbin/a2dissite 000-default.conf
     when: disable_default
     notify: Reload Apache
+  - name: X-XSS-Protection
+    shell: echo "'Header set X-XSS-Protection "1; mode=block"'" >> 
+    notify: Restart Apache
+
   handlers:
   - name: Restart Apache
     service:
