--- a/w3/ansible/config_password.yaml
+++ b/w3/ansible/config_password.yaml
@@ -12,7 +12,8 @@
 
   - name: Disable SSH with account Root
     shell: echo "PermitRootLogin no" >> /etc/SSH/SSHd_config
-    
-
-    # Chỉ sử dụng việc xác thực bằng public key:
-    # Password Authentication no
+    blockinfile:
+      path: /etc/SSH/SSHd_config
+      block: |
+        PermitRootLogin no
+        Password Authentication no
