--- a/w3/ansible/config_password.yaml
+++ b/w3/ansible/config_password.yaml
@@ -10,8 +10,7 @@
     shell: echo "password    requisite     pam_cracklib.so try_first_pass retry=3" >> /etc/pam.d/system-auth
     when: ansible_facts['os_family'] == "RedHat"
 
-  - name: Disable SSH with account Root
-    shell: echo "PermitRootLogin no" >> /etc/SSH/SSHd_config
+  - name: Config file /etc/SSH/SSHd_config
     blockinfile:
       path: /etc/SSH/SSHd_config
       block: |
