--- a/w3/config_apache/apache2/config_apache2.yml
+++ b/w3/config_apache/apache2/config_apache2.yml
@@ -29,27 +29,27 @@
     notify: Reload Apache
   - name: X-XSS-Protection
     lineinfile:
-      path: ~/.bashrc
+      path: /etc/apache2/apache2.conf
       line: Header set X-XSS-Protection "1; mode=block"
     notify: Restart Apache
   - name: HTTP Strict Transport Security
     lineinfile:
-      path: ~/.bashrc
+      path: /etc/apache2/apache2.conf
       line: Header     set    Strict-Transport-Security  "max-age=31536000;includeSubDomains; preload"
     notify: Restart Apache
   - name: X-Frame-Options
     lineinfile:
-      path: ~/.bashrc
+      path: /etc/apache2/apache2.conf
       line: Header always append X-Frame-Options DENY
     notify: Restart Apache
   - name: X-Content-Type-Options
     lineinfile:
-      path: ~/.bashrc
+      path: /etc/apache2/apache2.conf
       line: Header set X-Content-Type-Options nosniff
     notify: Restart Apache
   - name: Content Security Policy
     lineinfile:
-      path: ~/.bashrc
+      path: /etc/apache2/apache2.conf
       line: Header set Content-Security-Policy "default-src 'self';"
     notify: Restart Apache
   - name: xxx
