--- a/w2/install/mysql/mysql/install_mysql.yaml
+++ b/w2/install/mysql/mysql/install_mysql.yaml
@@ -1,17 +1,12 @@
 ---
 - hosts: web
   become: yes
-
-- tasks:
-
+  tasks:
   - name: Install MySQL
-    apt: 
-      name: mysql-server
-      update_cache: yes 
-      state: lastest
+    apt: name=mysql-server update_cache=yes  state=lastest
 
   - name: Ensure mysql service is running
     systemd:
-      name: mysqld
+      name: mysql
       state: started
       enabled: yes
