--- a/w2/install/php/php/install_php.yaml
+++ b/w2/install/php/php/install_php.yaml
@@ -1,27 +1,17 @@
 ---
 - hosts: web
   become: yes
-  become_user: datnt
 - tasks:
   - name: Install software-properties-common
-    apt: 
-      name: software-properties-common
-      update_cache: yes 
-      state: latest
-
+    apt: name=software-properties-common
   - name: Repo PHP 7.4
     apt_repository:
       repo="ppa:ondrej/php"
-
   - name: Install PHP7.4
-    apt: 
-      name: php7.4
-      update_cache: yes 
-      state: present
-
+    apt: name=php7.4 update_cache=yes state=present
   - name: Install package
     apt: 
-      name: {{ item }}
+      name: "{{ item }}"
       update_cache: yes 
       state: present
     with_item:
