--- a/w2/user/edit_permission_user/edit_permission_user.yaml
+++ b/w2/user/edit_permission_user/edit_permission_user.yaml
@@ -3,8 +3,8 @@
   become: true
   vars_files:
     - vars/default.yaml 
-- tasks:
+  tasks:
   - name: GRANT SUDO PERMISSION FOR USER
-    ansible.builtin.user:
+    user:
       name: "{{ user }}"
-      group: SUDO
+      groups: sudo
