--- a/w2/user/list_group.yaml
+++ b/w2/user/list_group.yaml
@@ -2,7 +2,7 @@
 - hosts: test
   # become: true
   tasks:
-  - name: Get List Group
+  - name: Get list group
     command: cat /etc/group
     register: list_group
   - name: List Group
