--- a/w3/ansible/config_password.yaml
+++ b/w3/ansible/config_password.yaml
@@ -1,7 +1,6 @@
 ---
 - hosts: test
   become: true
-  become_user: datnt
 - tasks:
   - name: Config file /etc/pam.d/common-password if OS is Debian.
     shell: echo "password   requisite   pam_cracklib.so   try_first_pass   retry=3 minlength=12 lcredit=1 ucredit=1 dcredit=1 ocredit=1 difok=4" >> /etc/pam.d/common-password
@@ -9,10 +8,11 @@
   - name: Config file /etc/pam.d/system-auth  if OS is RedHat.
     shell: echo "password    requisite     pam_cracklib.so try_first_pass retry=3" >> /etc/pam.d/system-auth
     when: ansible_facts['os_family'] == "RedHat"
-
   - name: Config file /etc/SSH/SSHd_config
     blockinfile:
       path: /etc/SSH/SSHd_config
       block: |
+        # tắt tính năng SSH từ tài khoản root
         PermitRootLogin no
+        # tắt tính năng xác thực bằng public key
         Password Authentication no
