--- a/w3/ansible/check_package_sudoers.yaml
+++ b/w3/ansible/check_package_sudoers.yaml
@@ -2,20 +2,20 @@
 - hosts: test
   remote_user: root
   vars:
-    - package: sudoer
+    - package: sudo
   tasks:
-    - name: Check if listed package is installed or not
-      command: dpkg-query -l "{{ package }}"
-      register: check_installed
-    - name: Install package if not present
-      package:
-        name: "{{ package }}"
-        update_cache: true
-        state: present
-      when: check_installed is failed
-    - name: Check again
-      command: dpkg-query -l "{{ package }}"
-      register: check2_installed 
-    - name: Result
-      debug: var=check2_installed.stdout_lines
+  - name: Check package sudo is installed or not
+    command: dpkg-query -l "{{ package }}"
+    register: check_installed
+  - name: Install package if not present
+    package:
+      name: "{{ package }}"
+      update_cache: true
+      state: present
+    when: check_installed is failed
+  - name: Check again
+    command: dpkg-query -l "{{ package }}"
+    register: check2_installed 
+  - name: Result
+    debug: var=check2_installed.stdout_lines
 
