--- a/w2/user/list_user.yaml
+++ b/w2/user/list_user.yaml
@@ -1,8 +1,7 @@
 ---
 - hosts: test
-  # become: true
   tasks:
-  - name: Get List User
+  - name: Get list user
     command: cat /etc/passwd
     register: list_users
   - name: List User
