--- a/w3/ansible/timestamp_for_normal_user.yaml
+++ b/w3/ansible/timestamp_for_normal_user.yaml
@@ -19,7 +19,7 @@
       block: |
         _fuck=$(who am i|awk '{print $1}')
         _dis=$(id -u $_fuck)
-        if [“$_dis” > 0]
+        if (( $_dis > 0 ))
         then
         export HISTSIZE=10000
         export HISTTIMEFORMAT='%F %T'
