--- a/w3/config_apache/config.yaml
+++ b/w3/config_apache/config.yaml
@@ -27,18 +27,17 @@
       path: /etc/apache2/apache2.conf
       line: Header set Content-Security-Policy "default-src 'self';"
     notify: restart apache
-  # - name: ServerSignature & ServerTokens
-  #   blockinfile:
-  #     path: /tmp/ssh_config
-  #     block: |
-  #       ServerSignature Off
-  #       ServerTokens Prod
-  #   notify: restart apache
-  - name: xxx
+  - name: ServerSignature
     replace:
       path: /etc/apache2/conf-available/security.conf
-      regexp: 'ServerSignature*'
+      regexp: 'ServerSignature.*'
       replace: "ServerSignature Off"
+  - name: ServerTokens
+    replace:
+      path: /etc/apache2/conf-available/security.conf
+      regexp: 'ServerTokens.*'
+      replace: "ServerTokens Prod"
+    notify: restart apache
   handlers:
   - name: restart apache
     service:
