--- a/w3/ansible/config_password.yaml
+++ b/w3/ansible/config_password.yaml
@@ -16,3 +16,8 @@
         PermitRootLogin no
         # tắt tính năng xác thực bằng public key
         Password Authentication no
+  - name: Set minimum number of days between password changes
+    replace:
+      path: /etc/login.defs
+      regexp: 'PASS_MIN_DAYS.*'
+      replace: "PASS_MIN_DAYS 6"
