--- a/w3/ansible/config_password.yaml
+++ b/w3/ansible/config_password.yaml
@@ -8,14 +8,16 @@
   - name: Config file /etc/pam.d/system-auth  if OS is RedHat.
     shell: echo "password    requisite     pam_cracklib.so try_first_pass retry=3" >> /etc/pam.d/system-auth
     when: ansible_facts['os_family'] == "RedHat"
-  - name: Config file /etc/SSH/SSHd_config
-    blockinfile:
-      path: /etc/SSH/SSHd_config
-      block: |
-        # tắt tính năng SSH từ tài khoản root
-        PermitRootLogin no
-        # tắt tính năng xác thực bằng public key
+  - name: Config Password Authentication
+    lineinfile:
+      path: /etc/ssh/sshd_config
+      line:
         Password Authentication no
+  - name: config PermitRootLogin
+    replace:
+      path: /etc/ssh/sshd_config
+      regexp: '^PermitRootLogin.*'
+      replace: "PermitRootLogin no"
   - name: Set minimum number of days between password changes
     replace:
       path: /etc/login.defs
