--- a/w3/ansible/check_package_sudoers.yaml
+++ b/w3/ansible/check_package_sudoers.yaml
@@ -17,5 +17,4 @@
     command: dpkg-query -l "{{ package }}"
     register: check2_installed 
   - name: Result
-    debug: var=check2_installed.stdout_lines
-
+    debug: var=check2_installed.stdout
