--- a/w4/check_config_password.yaml
+++ b/w4/check_config_password.yaml
@@ -30,4 +30,18 @@
       msg: "file /etc/pam.d/system-auth isn't configuarated"
     when: system-auth != system-auth_redhat
 
-    
+  - name: check config Password Authentication
+    shell: cat /etc/ssh/sshd_config | grep "^Password Authentication no"
+    register: config_password_authentication
+  - name: abc 
+    debug:
+      msg: "abc"
+    when: config_password_authentication == password_authentication
+
+  - name: check config PermitRootLogin
+    shell: cat /etc/ssh/sshd_config | grep "^PermitRootLogin.*"
+    register: config_permitrootlogin
+  - name: def
+    debug:
+      msg: "def"
+    when: config_permitrootlogin == permit_root_login
