--- a/w4/check_config_apache.yaml
+++ b/w4/check_config_apache.yaml
@@ -1,6 +1,8 @@
 ---
 - hosts: test
   become: true
+  vars_files:
+    - config.yaml
   tasks:
   - name: Get package information
     package_facts:
@@ -17,3 +19,39 @@
     when: 
       - ansible_facts['os_family'] == "Debian"
       - "'apache2' in ansible_facts.packages"
+  
+  - name: Check X-XSS-Protection
+    shell: cat /etc/apache2/apache2.conf | grep "^Header set X-XSS-Protection.*"
+    register: check_x-xss-protection_apache
+  - name: Result X-XSS-Protection
+    debug:
+      msg: "X-XSS-Protection is configured"
+    when: check_x-xss-protection_apache == x-xss-protection_apache
+  - name: Result X-XSS-Protection
+    debug:
+      msg: "X-XSS-Protection isn't configured"
+    when: check_x-xss-protection_apache != x-xss-protection_apache
+
+  - name: Check HTTP Strict Transport Security
+    shell: cat /etc/apache2/apache2.conf | grep "^Header     set    Strict-Transport-Securityhttp_strict_transport_security.*"
+    register: check_http_strict_transport_security_apache
+  - name: Result HTTP Strict Transport Security
+    debug:
+      msg: "HTTP Strict Transport Security is configured"
+    when: check_http_strict_transport_security_apache == http_strict_transport_security_apache
+  - name: Result HTTP Strict Transport Security
+    debug:
+      msg: "HTTP Strict Transport Security isn't configured"
+    when: check_http_strict_transport_security_apache != http_strict_transport_security_apache
+
+  - name: Check X-XSS-Protection
+    shell: cat /etc/apache2/apache2.conf | grep "^Header set X-XSS-Protection.*"
+    register: check_x-xss-protection_apache
+  - name: Result X-XSS-Protection
+    debug:
+      msg: "X-XSS-Protection is configured"
+    when: check_x-xss-protection_apache == x-xss-protection_apache
+  - name: Result X-XSS-Protection
+    debug:
+      msg: "X-XSS-Protection isn't configured"
+    when: check_x-xss-protection_apache != x-xss-protection_apache
