--- a/w4/check_config_nginx.yaml
+++ b/w4/check_config_nginx.yaml
@@ -11,61 +11,61 @@
     when: "'nginx' in ansible_facts.packages"
 
   - name: Check X-XSS-Protection
-    shell: cat /etc/apache2/apache2.conf | grep "^Header set X-XSS-Protection.*"
-    register: check_x-xss-protection_apache
+    shell: echo $(cat /etc/apache2/apache2.conf | grep "^Header set X-XSS-Protection.*")
+    register: check_x-xss-protection_nginx
   - name: Result X-XSS-Protection
     debug:
       msg: "X-XSS-Protection is configured"
-    when: check_x-xss-protection_apache == x-xss-protection_apache
+    when: check_x-xss-protection_nginx == x-xss-protection_nginx
   - name: Result X-XSS-Protection
     debug:
       msg: "X-XSS-Protection isn't configured"
-    when: check_x-xss-protection_apache != x-xss-protection_apache
+    when: check_x-xss-protection_nginx != x-xss-protection_nginx
 
   - name: Check HTTP Strict Transport Security
-    shell: cat /etc/apache2/apache2.conf | grep "^Header     set    Strict-Transport-Securityhttp_strict_transport_security.*"
-    register: check_http_strict_transport_security_apache
+    shell: echo $(cat /etc/apache2/apache2.conf | grep "^Header     set    Strict-Transport-Securityhttp_strict_transport_security.*")
+    register: check_http_strict_transport_security_nginx
   - name: Result HTTP Strict Transport Security
     debug:
       msg: "HTTP Strict Transport Security is configured"
-    when: check_http_strict_transport_security_apache == http_strict_transport_security_apache
+    when: check_http_strict_transport_security_nginx == http_strict_transport_security_nginx
   - name: Result HTTP Strict Transport Security
     debug:
       msg: "HTTP Strict Transport Security isn't configured"
-    when: check_http_strict_transport_security_apache != http_strict_transport_security_apache
+    when: check_http_strict_transport_security_nginx != http_strict_transport_security_nginx
 
   - name: Check X-Frame-Options
-    shell: cat /etc/apache2/apache2.conf | grep "^Header always append X-Frame-Options DENYx-frame-options.*"
-    register: check_x-frame-options_apache
+    shell: echo $(cat /etc/apache2/apache2.conf | grep "^Header always append X-Frame-Options DENY.*")
+    register: check_x-frame-options_nginx
   - name: Result X-Frame-Options
     debug:
       msg: "X-Frame-Options is configured"
-    when: check_x-frame-options_apache == x-frame-options_apache
+    when: check_x-frame-options_nginx == x-frame-options_nginx
   - name: Result X-Frame-Options
     debug:
       msg: "X-Frame-Options isn't configured"
-    when: check_x-frame-options_apache != x-frame-options_apache
+    when: check_x-frame-options_nginx != x-frame-options_nginx
 
   - name: Check X-Content-Type-Options
-    shell: cat /etc/apache2/apache2.conf | grep "^Header set X-Content-Type-Options nosniff"
-    register: check_x-content-type-options_apache
+    shell: echo $(cat /etc/apache2/apache2.conf | grep "^Header set X-Content-Type-Options nosniff")
+    register: check_x-content-type-options_nginx
   - name: Result X-Content-Type-Options
     debug:
       msg: "X-Content-Type-Options is configured"
-    when: check_x-content-type-options_apache == x-content-type-options_apache
+    when: check_x-content-type-options_nginx == x-content-type-options_nginx
   - name: Result X-Content-Type-Options
     debug:
       msg: "X-Content-Type-Options isn't configured"
-    when: check_x-content-type-options_apache != x-content-type-options_apache
+    when: check_x-content-type-options_nginx != x-content-type-options_nginx
 
   - name: Check Content Security Policy
-    shell: cat /etc/apache2/apache2.conf | grep "^Header set Content-Security-Policy.*"
-    register: check_content-security-policy_apache
+    shell: echo $(cat /etc/apache2/apache2.conf | grep "^Header set Content-Security-Policy.*")
+    register: check_content-security-policy_nginx
   - name: Result Content Security Policy
     debug:
       msg: "Content Security Policy is configured"
-    when: check_content-security-policy_apache == content-security-policy_apache
+    when: check_content-security-policy_nginx == content-security-policy_nginx
   - name: Result Content Security Policy
     debug:
       msg: "Content Security Policy isn't configured"
-    when: check_content-security-policy_apache != content-security-policy_apache
+    when: check_content-security-policy_nginx != content-security-policy_nginx
